--- a/week2project/style.css
+++ b/week2project/style.css
@@ -8,7 +8,18 @@ header {
     background-color: #000000;
     width: 100%;
     text-align: center;
-    margin-top: -19px;
+    height: 100px;
+}
+
+header h1 {
+    position: absolute;
+    width: 50%;
+}
+
+nav {
+    position: absolute;
+    margin-top: 10%;
+    width: 50%;
 }
 
 h1 {
@@ -17,31 +28,41 @@ h1 {
 
 button {
     color: #FFFFFF;
-    background-color: #000000;
+    background-color: transparent;
+    border: none;
 }
 
 img {
+    width: 100%;
+    height: 100%;
+}
+
+.food {
     width: 40%;
-    height: 40%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    margin: 5%;
 }
 
 .columns {
     width: 50%;
-    height: 100%;
+    min-height: 100vh;
 }
 
 .breakfast {
     display: flex;
     flex-flow: row wrap;
+    padding: 10% 5%;
 }
 
 #categories {
     background-color: #FFFFFF;
-
 }
 
 #shoppingcart {
     background-color: #F7F5F8;
     text-align: center;
+
 }
 
