--- a/week2project/style.css
+++ b/week2project/style.css
@@ -1,29 +1,40 @@
 body {
-    width: 100%;
+    /* width: 100%; */
     display: flex;
 }
 
+h1 {
+    font-size: 28px;
+}
+
+img {
+    width: 100%;
+    height: 100%;
+}
+
+.columns {
+    width: 50%;
+    min-height: 100vh;
+}
+
+/* Categories */
 header {
     color: #FFFFFF;
     background-color: #000000;
     width: 100%;
-    text-align: center;
     height: 100px;
 }
 
 header h1 {
     position: absolute;
     width: 50%;
+    text-align: center;
+
 }
 
 nav {
-    position: absolute;
-    margin-top: 10%;
-    width: 50%;
-}
-
-h1 {
-    font-size: 28px;
+    text-align: center;
+    position: relative;
 }
 
 button {
@@ -32,9 +43,16 @@ button {
     border: none;
 }
 
-img {
-    width: 100%;
-    height: 100%;
+#categories {
+    background-color: #FFFFFF;
+}
+
+/* div for food images */
+.breakfast {
+    display: flex;
+    flex-flow: row wrap;
+    padding: 7% 5%;
+    justify-content: center;
 }
 
 .food {
@@ -44,26 +62,6 @@ img {
     justify-content: center;
     margin: 3%;
     position: relative;
-}
-
-.columns {
-    width: 50%;
-    min-height: 100vh;
-}
-
-.breakfast {
-    display: flex;
-    flex-flow: row wrap;
-    padding: 10% 5%;
-}
-
-#categories {
-    background-color: #FFFFFF;
-}
-
-#shoppingcart {
-    background-color: #F7F5F8;
-    text-align: center;
 }
 
 .food > p {
@@ -76,3 +74,10 @@ img {
     margin: 0;
     height: 25%;
 }
+
+/* Shopping Cart */
+#shoppingcart {
+    background-color: #F7F5F8;
+    text-align: center;
+}
+
