--- a/week2project/style.css
+++ b/week2project/style.css
@@ -8,9 +8,11 @@ h1 {
 }
 
 img {
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    height: 50%;
 }
+
+
 
 .columns {
     width: 50%;
@@ -48,12 +50,31 @@ button {
 }
 
 /* div for food images */
-.breakfast {
+.selections {
     display: flex;
     flex-flow: row wrap;
-    padding: 7% 5%;
+    /* padding: 7% 5%; */
     justify-content: center;
+    /* width: 40%;
+    height: 100px; */
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    margin: 3%;
+    position: relative;
+
 }
+
+.selections ul {
+    position: absolute;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.25);
+    color: #F7F5F8;
+    width: 100%;
+    text-align: center;
+    margin: 0;
+    height: 25%;   
+} 
 
 .food {
     width: 40%;
