--- a/week2project/style.css
+++ b/week2project/style.css
@@ -63,17 +63,17 @@ button {
     color: #F7F5F8;
     /* text-align: center; */
     height: 50%;
-    width: 500%;
+    width: 100%;
     margin-left: -40px;
     display: flex;
     flex-flow: column wrap;
 } 
 
 .food {
-    width: 40%;
+    width: 100%;
     height: 100px;
-    display: flex;
-    justify-content: center;
+    /* display: flex; */
+    /* justify-content: center; */
     margin: 3%;
     position: relative;
 }
@@ -91,7 +91,17 @@ button {
 
 /* Shopping Cart */
 #shoppingcart {
-    background-color: #F7F5F8;
+    background-color: #f7f5f8;
     text-align: center;
+}
+
+/* #shoppingcart ul {
+	list-style: none;
+	padding: 0;
+} */
+
+#shoppingcart li {
+	color: red;
+	font-size: 18px;
 }
 
